Fixed issue with broken css

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -37,7 +37,6 @@
 
 .sub-text__container {
     max-width: 28rem;
-    font-family: rob;
 }
 
 .content-description__text {
